##Text encoding: utf-8

2014-03-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: don't set an Id to the residue, AddChild will do
	the job.
	* libs/gcu/object.cc: do not cache Id translations when not done with an
	explicit SetId();

2014-03-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: don't crash if an atom is missing when evaluating
	angles.
	* libs/gcp/molecule.cc: correctly checks connectivity for molecules having
	fragments. 
	* libs/gcp/view.cc: fix update when deleting a aprial selecion inside a
	group.
	* libs/gcu/bond.cc: don't crash if an atom is missing when evaluating
	angles.

2014-03-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fix tool buttons appearance for Gtk+-3.0 >= 3.10.

2014-02-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: fix drawing area with gtk3 >= 3.10.

2014-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.14.8).

2014-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: version bump (0.14.7).

2014-02-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: always use the correct application to load residues.
	* libs/gcu/application.cc: don't use a NULL command context.
	* libs/gcu/application.h: tupo.
	* libs/gcugtk/application.cc: add a static GetDefaultApplication() method.
	* libs/gcugtk/application.h: ditto.
	* libs/gcugtk/cmd-context-gtk.h: ensure that class Application is declared.
	* mozilla-plugin/chem-viewer.cc: load radii for 3Dmolecules.

2014-02-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: fixed crash with recent Gtk+.

2014-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/view.cc: do not try to export a transparent image to .bmp (also
	fix pasting into LO).
	* libs/gcp/view.h: ditto.
	* libs/gcp/widgetdata.cc: ditto.

2014-01-18  Jean Bréfort  <jean.brefort@normalesup.org>